--- a/Traffic_ControlV2/main.html
+++ b/Traffic_ControlV2/main.html
@@ -23,8 +23,8 @@
 
         <div id="stats" width="500" height="500">
             <h1>Statistique</h1>
+            <div id="fps">ooooo</div>
         </div>
-
 
 
     </div>
@@ -56,8 +56,10 @@
     <script src="js/voiture.js"></script>
     <script src="js/light.js"></script>
     <script src="lib/statistique.js"></script>
+    <script src="main.js"></script>
 
     <script>
+
 
         function drawMap(model) {
             zoom();
@@ -72,13 +74,13 @@
             var nbCar = prompt("Combien de véhicule souhaite aller à cette évènement ?");
             for (var i = 0; i < nbCar; i++) {
                 generateVehicules(Nice);
-
             }
             redrawVehicules();
         }
 
 
         function runAnimation() {
+            //requestAnimationFrame(mainloop);
             runAnimationLights();
             runAnimationCars();
         }
@@ -89,16 +91,38 @@
         }
 
         function runAnimationCars() {
-            setInterval(runCars, 200);
-            StatistiqueTimer();
+            setInterval(mainloop, 200);
         }
 
         function runCars() {
+            /* drawRoute(Nice);
+             redrawLights();
+             drawEvents();
+             roule();*/
+        }
+
+        function clearCanvas() {
+            var canvas, ctx, w, h;
+            canvas = document.querySelector("#mon_canvas");
+            w = canvas.width;
+            h = canvas.height;
+            ctx = canvas.getContext('2d');
+            ctx.clearRect(0, 0, w, h);
+        }
+
+        function mainloop() {
+            clearCanvas();
             drawRoute(Nice);
+            //changeState();
             redrawLights();
             drawEvents();
             roule();
+            StatistiqueTimer();
+            //requestAnimationFrame(mainloop);
         }
+
+
+
 
     </script>
     <title>Traffic Control V2</title>
