--- a/Traffic_ControlV2/main.html
+++ b/Traffic_ControlV2/main.html
@@ -4,53 +4,35 @@
 <body>
 
     <div>
-
-
-        <canvas id="mon_canvas" width="1000" height="1000">
-
+        <canvas id="mon_canvas" width="1100" height="1100">
             <div style="display:none;">
                 <img id="event" src="./image/event.png" width="100" height="100">
             </div>
-
         </canvas>
 
         <div>
             <button onclick="PopCars()">Pop Cars</button>
             <button onclick="runAnimation()">Run Simulation</button>
+            <button onclick="AddStreet()">Add Street</button>
+            <button onclick="RemoveStreet()">Remove Street</button>
         </div>
-
-
 
         <div id="stats" width="500" height="500">
             <h1>Statistique</h1>
             <div id="fps"></div>
+            <div id="time"></div>
             <div id="dataStatistique"></div>
         </div>
 
-
     </div>
-
-
-
 
 </body>
 
 <head>
-    <style>
-        #mon_canvas {
-            border: 1px solid;
-            background-color: rgb(23, 156, 6);
-        }
-
-        #stats {
-            border: 1px solid;
-            background-color: rgb(218, 219, 218);
-            color: black;
-            display: block;
-            width: 300px;
-            height: 300px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="main.css">
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="utils/utils.js"></script>
     <script src="model/Nice.js"></script>
     <script src="js/map.js"></script>
     <script src="js/event.js"></script>
@@ -59,11 +41,8 @@
     <script src="lib/statistique.js"></script>
     <script src="main.js"></script>
 
-
     <title>Traffic Control V2</title>
 
 </head>
-
-
 
 </html>
